--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode development"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "clean-webpack-plugin": "^1.0.0",
-    "webpack": "^4.26.0",
+    "webpack": "4.0.0",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
