--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "clean-webpack-plugin": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "image-webpack-loader": "^4.6.0",
+    "url-loader": "^1.1.2",
     "webpack": "4.0.0",
     "webpack-cli": "^3.1.2"
   },
