--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^2.0.0",
     "image-webpack-loader": "^4.6.0",
+    "loadsh": "^0.0.3",
     "url-loader": "^1.1.2",
     "webpack": "4.0.0",
     "webpack-cli": "^3.1.2"
