--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "image-webpack-loader": "^4.6.0",
     "loadsh": "^0.0.3",
     "url-loader": "^1.1.2",
-    "webpack": "4.0.0",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "style-loader": "^0.23.1",
     "webpack-dev-server": "^3.1.10"
   }
