--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "file-loader": "^2.0.0",
     "image-webpack-loader": "^4.6.0",
     "loadsh": "^0.0.3",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
