--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^2.0.0",
     "image-webpack-loader": "^4.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "loadsh": "^0.0.3",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
