--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "autoprefixer": "^9.4.2",
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^2.0.0",
     "image-webpack-loader": "^4.6.0",
@@ -21,6 +22,7 @@
     "less-loader": "^4.1.0",
     "loadsh": "^0.0.3",
     "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
